--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tesx",
   "version": "0.1.0",
   "private": true,
+  "homepage" :".",
   "dependencies": {
     "antd": "^3.24.3",
     "axios": "^0.19.0",
