--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "tesx",
   "version": "0.1.0",
   "private": true,
-  "homepage" :".",
+  "homepage": ".",
   "dependencies": {
     "antd": "^3.24.3",
     "axios": "^0.19.0",
+    "js-cookie": "^2.2.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
