--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,11 @@
 {
+  "presets": [
+    "react-app"
+  ],
   "plugins": [["import", 
     {
       "libraryName": "antd",
-      "libraryDirectory": "lib",
+      "libraryDirectory": "es",
       "style": true
     }
   ]]
