--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
-    "antd": "^4.1,3",
+    "antd": "^4.5.1",
     "axios": "^0.19.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
@@ -41,6 +41,7 @@
     "jest-watch-typeahead": "0.4.0",
     "js-cookie": "^2.2.1",
     "mini-css-extract-plugin": "0.8.0",
+    "moment": "^2.27.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
